<resources>
    <string name="app_name">Notifellow</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feed">Feed</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="schedule">Schedule</string>
    <!--<string name="heyeye">heyeye</string>-->
    <!--Do we need this? ^^^^^^^^^^^ -->
    <string name="reminder_title">Reminder Title</string>
    <!--<string name="deneme">Deneme</string>-->
    <string name="backEndServerLink">127.0.0.1</string>
    <string name="title_activity_maps">Map</string>
    <string name="tap_instructions">tap_instructions</string>
    <string name="move_the_camera">move_the_camera</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notes">Notes</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string-array name="Gender">
        <item>Not Specified</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>


    <string name="pref_title_vibrate">Vibrate</string>
    <!--<string name="refresh_gps_service">refresh GPS service</string>-->
    <!--<string name="nearby_place_picker">Nearby place picker</string>-->
    <!--<string name="display_nearby_place_s_info">Display nearby place\'s info</string>-->
    <!--<string name="choose_marker">Choose Marker</string>-->
    <string name="search_bar_indicator">Search Bar indicator</string>
    <!--<string name="enter_address_city_or_zip_code">Enter address, city or zip code</string>-->
    <string name="location">Location</string>
    <string name="not_specified">Not Specified.</string>
    <string name="map">Map</string>
    <string name="add_reminder_task"><![CDATA[Add \n Reminder & Task]]></string>
    <string name="title_search">Search</string>
    <string name="find">Find</string>
    <string name="create_note">Create Note</string>
    <string name="get_notes">Get Notes</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <!--<string name="notes_camera">NotesCamera</string>-->
    <!--<string name="add_image_from_gallery">Add image From Gallery</string>-->
    <string name="capture_image">Capture image</string>
    <string name="save_note">Save Note</string>
    <string name="title_activity_social">Social</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="friends">Friends</string>
    <string name="requests">Requests</string>
    <string name="explore">Explore</string>
    <string name="messages">Messages</string>
    <string name="info">Info</string>
    <!--<string name="map_activity">mapActivity</string>-->



    <!--Testing purposes start-->
    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
    <!--Testing purposes end-->

</resources>
